--- a/index.html
+++ b/index.html
@@ -1210,6 +1210,10 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>Question Service</em></strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Saves the questions.</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>Friend Service</em></strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Allows to add, list and remove other users of the app as friends.</p></td>
+</tr>
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
