--- a/index.html
+++ b/index.html
@@ -1242,7 +1242,7 @@ In case the login isn&#8217;t succesfully, a warning message is shown.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/sequencediagram-login.png" alt="sequencediagram login" width="554" height="495">
+<img src="./images/login.png" alt="Login">
 </div>
 </div>
 </div>
@@ -1277,7 +1277,7 @@ In case the login isn&#8217;t succesfully, a warning message is shown.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/06_history.png" alt="Game">
+<img src="./images/06_history.png" alt="History">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
