--- a/index.html
+++ b/index.html
@@ -1195,8 +1195,12 @@ The main constraints are developing the game as a web app and using Wikidata to 
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>Game</em></strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>User interface</em></strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Game screen where the user can play the game.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>Gateway service</em></strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Allows the user interface to communicate with each microservice.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>Game Service</em></strong></p></td>
@@ -1204,7 +1208,11 @@ The main constraints are developing the game as a web app and using Wikidata to 
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>Users Service</em></strong></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Allows the client to create a new account for the application, log in and log out.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Allows the client to create a new account for the application and get some information about users.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>Auth Service</em></strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Allows the client to login in the application.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong><em>Question Generator Service</em></strong></p></td>
